# QtPCPartPicker

./: .gitignore  AIO.cpp  CMakeLists.txt  CPU.cpp  CPU.h  GPU.cpp  GPU.h  RAM.cpp  RAM.h  README.md  TODO  airCooler.cpp  amdCPU.cpp  amdCPU.h  amdGPU.cpp  amdGPU.h  compatibility.cpp  compatibility.h  cooler.cpp  cooler.h  database.cpp  dataholder.cpp  dataholder.h  dbtests.cpp  dbtests.h  fileWriter.cpp  fileWriter.cpp.autosave  fileWriter.h  filereader.cpp  filereader.h  hdd.cpp  intelCPU.cpp  intelCPU.h  intelGPU.cpp  intelGPU.h  m2SSD.cpp  main.cpp  motherboard.cpp  motherboard.h  nvidiaGPU.cpp  (+12 more)
Test/: CPU.JSON  Case.JSON  Motherboard.JSON  RAM.JSON
Test/include/: dbtests.h  sbtestsreceiver.h  specbuildertests.h
Test/src/: dbtests.cpp  sbtestsreceiver.cpp  specbuildertests.cpp
database/: CPU.JSON  Case.JSON  Cooler.JSON  GPU.JSON  Motherboard.JSON  PSU.JSON  RAM.JSON  Storage.JSON
include/Database/: dataholder.h  filereader.h  filewriter.h
include/Logic/: compatibility.h  pcpartpicker.h  specbuilder.h  specobject.h
include/PC_Parts/CPU/: amdcpu.h  cpu.h  intelcpu.h
include/PC_Parts/Case/: pccase.h
include/PC_Parts/Cooler/: aio.h  aircooler.h  cooler.h
include/PC_Parts/GPU/: amdgpu.h  intelgpu.h  nvidiagpu.h
include/PC_Parts/Motherboard/: motherboard.h
include/PC_Parts/PSU/: psu.h
include/PC_Parts/RAM/: ram.h
include/PC_Parts/Storage/: hdd.h  m2ssd.h  satassd.h  storage.h
src/Database/: dataholder.cpp  filereader.cpp  filewriter.cpp
src/Logic/: compatibility.cpp  pcpartpicker.cpp  specbuilder.cpp  specobject.cpp
src/PC_Parts/CPU/: amdcpu.cpp  cpu.cpp  intelcpu.cpp
src/PC_Parts/Case/: pccase.cpp
src/PC_Parts/Cooler/: aio.cpp  aircooler.cpp  cooler.cpp
src/PC_Parts/GPU/: amdgpu.cpp  gpu.cpp  intelgpu.cpp  nvidiagpu.cpp
src/PC_Parts/Motherboard/: motherboard.cpp
src/PC_Parts/PSU/: psu.cpp
src/PC_Parts/RAM/: ram.cpp
src/PC_Parts/Storage/: hdd.cpp  m2ssd.cpp  satassd.cpp  storage.cpp
